--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Test task 65App</string>
+    <string name="employe_photo_description">Employe photo</string>
 </resources>
